--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - telescope
     ports:
       - 5000:5000
+  website:
+    build: ./website
+    networks:
+      - telescope
+
 
 networks:
   telescope:
