--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,6 @@ services:
     build: ./virtual_telescope_master
     networks:
       - telescope
-  state_api:
-    build: ./state_api
-    networks:
-      - telescope
   webcam:
     build: ./webcam
     networks:
@@ -19,13 +15,25 @@ services:
     build: ./lab_master
     networks:
       - telescope
+  state_api:
+    build: ./state_api
+    networks:
+      - telescope
   website:
     build: ./website
     networks:
       - telescope
     ports:
       - 5000:5000
+  database:
+    build: ./database
+    networks:
+      - telescope
+    volumes:
+      - database:/database
 
+volumes:
+  database:
 
 networks:
   telescope:
